# learning

./: .gitmodules  README.md
category_theory_for_programmers/part_1/: scratch.ml
ios/combine/swiftui-notes/: .compile  buildServer.json
ios/swift_ui/: README.md
ios/swift_ui/Moonshot/Moonshot/: ContentView.swift  MoonshotApp.swift
ios/swift_ui/Moonshot/Moonshot.xcodeproj/: project.pbxproj
ios/swift_ui/Moonshot/Moonshot.xcodeproj/project.xcworkspace/xcuserdata/kyle.xcuserdatad/: UserInterfaceState.xcuserstate
living_clojure/: .gitignore  README.md  hello_repl.clj  polymorphism.clj  state_and_concurrency.clj
ml/cs231n/: backprop.py  linear_classification.py  nearest_neighbor.py  requirements.txt
ml/neural_network_zero_to_hero/: micrograd.ipynb
performance_aware_programming/: dune-project
performance_aware_programming/lib/: binary_parser.ml  cpu.ml  dune  execute.ml  instruction.ml  register.ml  twos_complement.ml  util.ml
performance_aware_programming/test/: decode.ml  dune  exec.ml
python/fluent_python/: README.md  chapter_1.py  chapter_11.py  chapter_2.py  chapter_3.py  chapter_4.py  chapter_7.py
rust_book/: README.md
rust_book/automated_tests/adder/src/: lib.rs
rust_book/common_collections/src/: main.rs
rust_book/common_programming_concepts/src/: main.rs
rust_book/enum_and_pattern_matching/src/: main.rs
rust_book/error_handling/src/: main.rs
rust_book/fearless_concurrency/src/: main.rs
rust_book/generic_types_traits_lifetimes/src/: main.rs
rust_book/guessing_game/src/: main.rs
rust_book/iterators_and_closures/src/: main.rs
rust_book/managing_growing_projects/src/garden/: vegetables.rs
rust_book/minigrep/src/: main.rs
rust_book/smart_pointers/src/: main.rs
rust_book/understanding_ownership/src/: main.rs
rust_book/using_structs/src/: main.rs
solid-js/: .babelrc
solid-js/todos/src/: App.jsx
zero_to_production_in_rust/newsletter/: Cargo.toml
zero_to_production_in_rust/newsletter/migrations/: 20230523004517_rename-subscriptions.sql
zero_to_production_in_rust/newsletter/scripts/: init_db.sh
zero_to_production_in_rust/newsletter/src/: configuration.rs  lib.rs  main.rs  startup.rs
zero_to_production_in_rust/newsletter/src/routes/: subscriptions.rs
zero_to_production_in_rust/newsletter/tests/: health_check.rs
zero_to_production_in_rust/newsletter/web/src/: App.tsx  index.tsx
zig/introduction_to_zig/: .gitignore  build.zig  build.zig.zon  main
zig/introduction_to_zig/src/: chapter_2.zig  chapter_3.zig  chapter_4.zig  main.zig
