[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.3", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate"]
