[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.3", features = ["v4"] }
env_logger = "0.9"
log = "0.4.18"
tracing = {version= "0.1.7", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "registry"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.5"

[dev-dependencies]
once_cell = "1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate"]
